# xintelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: keywords.yaml  official_handles.yaml  output.yaml  profile.yaml  topics.yaml
docs/: design-lite.md  design.md  future_features.md  hermes_cli_spec.md  operations.md  requirements.md
fixtures/: sample_posts.json
scripts/: _redact.py  analyze_trends.py  check_claude_llm.py  check_hermes.py  export_results.py  generate_content_drafts.py  generate_video_prompts.py  run_daily.py  search_x.py  sync_to_xintelligence.ps1
src/: __init__.py
src/adapters/: llm_base.py  llm_claude.py  llm_mock.py  search_base.py  search_hermes.py  search_mock.py  search_x_api.py  search_xai.py
src/core/: dedupe.py  (+8 more)
tests/: test_citationless_summary.py  test_config.py  test_content_completion_check.py  test_content_originality_guard.py  test_deduplication.py  test_hermes_capabilities.py  test_hermes_doctor_parsing.py  test_hermes_error_handling.py  test_hermes_fallback_modes.py  test_hermes_missing_fields.py  test_hermes_redaction.py  test_hermes_response_parsing.py  test_hermes_topic_overrides.py  test_impact_estimator.py  test_manifest.py  test_missing_fields.py  test_no_auto_posting_capability.py  test_no_secret_in_manifest.py  test_official_handle_promotion.py  test_output_format.py  test_provider_contract.py  test_run_daily_e2e.py  test_scoring.py  test_source_url_preservation.py  test_trend_keyword_filtering.py  test_ui_logic.py  test_ui_review_workflow.py
ui/: logic.py  streamlit_app.py
(+6 files in other folders)
