[project]
name = "x-intelligence"
version = "0.1.0"
description = "X Intelligence & Content Automation Skills (MVP, mock-first, HITL)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
    "hermes_live: requires real Hermes CLI installed in WSL2 with xAI OAuth; set HERMES_LIVE_TESTS=1",
]
